...
            "value" : "Back"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "返回"
          }
        }
      }
    },
    "a11y_insert_image" : {
      "extractionState" : "stale",
...
            "value" : "Discard"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "放弃"
          }
        }
      }
    },
    "editor_cross_day_msg" : {
      "extractionState" : "stale",
...
            "value" : "Quote"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "引用"
          }
        }
      }
    },
    "editor_tool_strike" : {
      "extractionState" : "stale",
...
            "value" : "Write"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "写日记"
          }
        }
      }
    },
    "index_yesterday" : {
      "extractionState" : "stale",
...
            "value" : "Save"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "search_all_loc" : {
      "extractionState" : "stale",
...
